# storage/api-docs/api-docs.json
@@ -27,174 +27,6 @@
                             }
                         },
                         "example": "10766"
-                    },
-                    {
-                        "name": "ESCOLA_INEP",
-                        "in": "query",
-                        "description": "ID Escola Inep",
-                        "required": false,
-                        "style": "form",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "string"
-                            }
-                        },
-                        "example": "51034077"
-                    },
-                    {
-                        "name": "TURMA_GID",
-                        "in": "query",
-                        "description": "ID Escola Inep",
-                        "required": false,
-                        "style": "form",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "string"
-                            }
-                        },
-                        "example": "463476534675"
-                    },
-                    {
-                        "name": "TURMA_NAME",
-                        "in": "query",
-                        "description": "ID Escola Inep",
-                        "required": false,
-                        "style": "form",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "string"
-                            }
-                        },
-                        "example": "1\\u00ba - 2\\u00ba Ano B - EM Not"
-                    },
-                    {
-                        "name": "TURMA_SURNAME",
-                        "in": "query",
-                        "description": "ID Escola Inep",
-                        "required": false,
-                        "style": "form",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "string"
-                            }
-                        },
-                        "example": "EEPA ACO - 2022"
-                    },
-                    {
-                        "name": "PROFESSOR_GID",
-                        "in": "query",
-                        "description": "ID Escola Inep",
-                        "required": false,
-                        "style": "form",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "string"
-                            }
-                        },
-                        "example": "114806048526598013023"
-                    },
-                    {
-                        "name": "OWNER_EMAIL_GID",
-                        "in": "query",
-                        "description": "ID Escola Inep",
-                        "required": false,
-                        "style": "form",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "string"
-                            }
-                        },
-                        "example": "escola.10766@edu.mt.gov.br"
-                    },
-                    {
-                        "name": "NivelTurma",
-                        "in": "query",
-                        "description": "ID Escola Inep",
-                        "required": false,
-                        "style": "form",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "string"
-                            }
-                        },
-                        "example": "10,12"
-                    },
-                    {
-                        "name": "CodigoIbgeMunicipio",
-                        "in": "query",
-                        "description": "ID Escola Inep",
-                        "required": false,
-                        "style": "form",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "string"
-                            }
-                        },
-                        "example": "5100102"
-                    },
-                    {
-                        "name": "NomeMunicipio",
-                        "in": "query",
-                        "description": "ID Escola Inep",
-                        "required": false,
-                        "style": "form",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "string"
-                            }
-                        },
-                        "example": "ACORIZAL"
-                    },
-                    {
-                        "name": "CodigoIbgeDRE",
-                        "in": "query",
-                        "description": "ID Escola Inep",
-                        "required": false,
-                        "style": "form",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "string"
-                            }
-                        },
-                        "example": "5108402"
-                    },
-                    {
-                        "name": "NomeDRE",
-                        "in": "query",
-                        "description": "ID Escola Inep",
-                        "required": false,
-                        "style": "form",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "string"
-                            }
-                        },
-                        "example": "DRE VARZEA GRANDE"
-                    },
-                    {
-                        "name": "NomeEscola",
-                        "in": "query",
-                        "description": "ID Escola Inep",
-                        "required": false,
-                        "style": "form",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "string"
-                            }
-                        },
-                        "example": "EE Ponce de Arruda"
                     }
                 ],
                 "responses": {
@@ -218,14 +50,14 @@
                 "tags": [
                     "Alunos"
                 ],
-                "summary": "Get all Professor",
+                "summary": "Get all Alunos",
                 "description": "Fetches all the Asset records",
-                "operationId": "952d9dafd303b01c0d91f4aa66f674bb",
+                "operationId": "e8da073d34db13db6909108ae5432639",
                 "parameters": [
                     {
-                        "name": "ESCOLA_ID",
+                        "name": "Alunos",
                         "in": "query",
-                        "description": "ID Escola ",
+                        "description": " Todos os dados da tabela Alunos ",
                         "required": false,
                         "style": "form",
                         "schema": {
@@ -234,21 +66,7 @@
                                 "type": "string"
                             }
                         },
-                        "example": "10766"
-                    },
-                    {
-                        "name": "ESCOLA_INEP",
-                        "in": "query",
-                        "description": "ID Escola Inep",
-                        "required": false,
-                        "style": "form",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "string"
-                            }
-                        },
-                        "example": "51034077"
+                        "example": " "
                     }
                 ],
                 "responses": {
